[package]
name = "reactivity"
version = "0.1.0"
license = "Apache-2.0"
authors = ["mingshuisheng <mingshuisheng@gmail.com>"]
description = "a reactive ui framework for druid"
repository = "https://github.com/mingshuisheng/reactivity"
readme = "README.md"
keywords = ["reactivity", "reactivate", "observe", "data"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
